--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fullpage/react-fullpage": "^0.1.14",
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
+    "fg-loadcss": "^2.1.0",
     "gatsby": "^2.8.6",
     "gatsby-image": "^2.1.2",
     "gatsby-plugin-manifest": "^2.1.1",
