--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.14",
-    "@material-ui/core": "^4.0.1",
-    "@material-ui/icons": "^4.0.1",
+    "@material-ui/core": "^4.1.0",
+    "@material-ui/icons": "^4.1.0",
+    "@material-ui/styles": "^4.1.0",
     "clsx": "^1.0.4",
     "fg-loadcss": "^2.1.0",
     "gatsby": "^2.8.6",
