--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^2.8.8",
     "gatsby-image": "^2.1.3",
     "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.3",
