--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "fg-loadcss": "^2.1.0",
     "gatsby": "^2.8.8",
     "gatsby-image": "^2.1.3",
+    "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-prismjs": "^3.3.0",
     "gatsby-source-filesystem": "^2.0.39",
     "gatsby-transformer-remark": "^2.3.12",
