--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "typed.js": "^2.0.11"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1",
     "prettier": "^1.19.1"
   },
   "keywords": [
