--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1",
+    "postcss": "^8.3.5",
     "prettier": "^1.19.1"
   },
   "keywords": [
