--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "typed.js": "^2.0.12"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
