--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.11.4",
     "gatsby": "^4.16.0",
     "gatsby-image": "^3.11.0",
+    "gatsby-legacy-polyfills": "^2.16.0",
     "gatsby-plugin-catch-links": "^4.16.0",
     "gatsby-plugin-manifest": "^4.16.0",
     "gatsby-plugin-material-ui": "^4.1.0",
