--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
+    "autoprefixer": "^10.4.7",
     "gatsby": "^4.16.0",
     "gatsby-image": "^3.11.0",
     "gatsby-legacy-polyfills": "^2.16.0",
@@ -15,6 +16,7 @@
     "gatsby-plugin-manifest": "^4.16.0",
     "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-offline": "^5.16.0",
+    "gatsby-plugin-postcss": "^5.16.0",
     "gatsby-plugin-react-helmet": "^5.16.0",
     "gatsby-plugin-sharp": "^4.16.1",
     "gatsby-remark-external-links": "0.0.4",
@@ -26,12 +28,13 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^3.1.3"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.7",
-    "postcss": "^8.3.5",
+    "postcss": "^8.4.14",
     "prettier": "^1.19.1"
   },
   "keywords": [
