--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^3.1.3"
   },
